Functionality for TF-12 admin and user login

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-controller="Login" asp-action="Index">
+                            <a asp-controller="Login" asp-action="Login">
                                 <span class="fa fa-user"></span>
                             </a>
                         </li>
