--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                 <div class="nk-nav-table">
 
                     <a href="index.html" class="nk-nav-logo">
-                        <img src="assets/images/logo.png" alt="GoodGames" width="199">
+                        <img src="~/assets/images/logo.png" alt="GoodGames" width="199">
                     </a>
 
                     <ul class="nk-nav nk-nav-center d-none d-md-table-cell" data-nav-mobile="#nk-nav-mobile">
@@ -115,7 +115,7 @@
             @RenderBody()
         </main>
     </div>
-
+    </body>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - FowlerSite - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -184,5 +184,4 @@
         <script src="~/assets/js/goodgames-init.js"></script>
     </footer>
     @RenderSection("Scripts", required: false)
-</body>
 </html>
