--- a/FowlerSite/Views/Games/Create.cshtml
+++ b/FowlerSite/Views/Games/Create.cshtml
@@ -34,9 +34,14 @@
                 <span asp-validation-for="Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Platforms" class="control-label">PlayStation</label>
+                <input asp-for="Platforms" class="form-control" type="checkbox"/>
+                <span asp-validation-for="Platforms" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
-            </form>
+        </form>
     </div>
 </div>
 
