Created a new view for filtered games, the current filters now work as expected. Will be adding more in a different task.

--- a/FowlerSite/Views/Games/Filter.cshtml
+++ b/FowlerSite/Views/Games/Filter.cshtml
@@ -10,16 +10,16 @@
     <div class="row">
         <div class="col-4">
 
-        <h1>Filters</h1>
+            <h1>Filters</h1>
 
-        <!--
-        START: Filter Sidebar
+            <!--
+            START: Filter Sidebar
 
-        Additional Classes:
-            .nk-sidebar-left
-            .nk-sidebar-right
-            .nk-sidebar-sticky
-        -->
+            Additional Classes:
+                .nk-sidebar-left
+                .nk-sidebar-right
+                .nk-sidebar-sticky
+            -->
             <aside class="nk-sidebar nk-sidebar-left">
                 <div class="nk-widget nk-widget-highlighted">
                     <form method="post" class="nk-form nk-form-style-1" novalidate="novalidate">
@@ -42,7 +42,7 @@
                                     <option value="Action">Action</option>
                                     <option value="RPG">RPG</option>
                                     <option value="MMO">MMO</option>
-                                    <option value="MOBA">MOBA</option>
+                                    <option value="Moba">MOBA</option>
                                     <option value="Adventure">Adventure</option>
                                     <option value="Indie">Indie</option>
                                     <option value="Strategy">Strategy</option>
